figured out how to get the mode for neighborhoods

--- a/ahilp_csv_tinkering.ipynb
+++ b/ahilp_csv_tinkering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -13,7 +13,7 @@
      "text": [
       "Here's the dictionary I've created:\n",
       "\n",
-      "{'Location': {'BRIDGEVILLE': 2, 'EDGEWOOD': 2, 'NORTH VERSAILLES': 2, 'BEN AVON': 1, 'DRAVOSBURG': 3, 'DUQUESNE': 4, 'FOREST HILLS': 5, 'HARRISON ': 2, 'MT. OLIVER': 3, 'SCOTT ': 2, 'SWISSVALE': 3, 'WHITEHALL': 1, 'BALDWIN ': 6, 'ELIZABETH ': 2, 'INDIANA': 1, 'JEFFERSON ': 1, 'RANKIN': 1, 'SPRINGDALE ': 1, 'EAST PITTSBURGH': 2, 'WHITE OAK': 2, 'NORTH BRADDOCK': 2, 'WEST VIEW': 3, 'BRACKENRIDGE': 1, 'CLAIRTON': 2, 'MCKEES ROCKS': 2, 'MONROEVILLE  ': 2, \"O'HARA\": 1, 'BLAWNOX': 1, 'WEST DEER': 1, 'WEST MIFFLIN': 7, 'WILKINS': 2, 'MOUNT OLIVER': 2, 'NORTH FAYETTE': 1, 'EAST MCKEESPORT': 1, 'ROSS ': 1, 'PORT VUE': 3, 'MONROEVILLE': 3, 'EMSWORTH': 1, 'SHALER': 2, 'MUNHALL': 5, 'LEET': 1, 'PLEASANT HILLS': 1, 'WILKINSBURG': 2, 'HOMESTEAD': 1, 'CARNEGIE': 2, 'CRAFTON': 1, 'GLASSPORT': 1, 'TURTLE CREEK': 1, 'BRADDOCK': 2, 'VERSAILLES': 1, 'HARMAR': 1, 'WHITAKER': 1, 'HARRISON': 1, 'BETHEL PARK': 1, 'PLUM ': 1, 'LINCOLN ': 1, 'DORMONT': 1}, 'Year': {'2015': 22, '2016': 16, '2017': 24, '2018': 16, '2019': 26, '2020': 5}, 'Total Number of Loans': {'1': 100, '2': 9}, 'Total Loan Amount': [10000.0, 3900.0, 21475.0, 16475.0, 24575.0, 11950.0, 10714.0, 7400.0, 5000.0, 23000.0, 14750.0, 20883.0, 12550.0, 24875.0, 4950.0, 22650.0, 5885.0, 6505.48, 8950.0, 17725.0, 8118.0, 13265.0, 3000.0, 24800.0, 10020.0, 13575.0, 21710.0, 8720.0, 5200.0, 5786.0, 24330.0, 14496.0, 4186.0, 3250.0, 7221.0, 7862.0, 29243.0, 4189.0, 23975.0, 5925.0, 6227.0, 6611.0, 5613.0, 7000.0, 10350.0, 24000.0, 23375.0, 3750.0, 15375.0, 8127.5, 6000.0, 23825.0, 11718.0, 22310.0, 4370.0, 9181.0, 23375.0, 8085.0, 10000.0, 10985.0, 19740.0, 5250.0, 13998.56, 24500.0, 9500.0, 11240.0, 11300.0, 24570.0, 3850.0, 8875.0, 8800.0, 14825.0, 8725.0, 16972.0, 13465.0, 5400.0, 8886.0, 5950.0, 9659.0, 7282.57, 12000.0, 17310.0, 5500.0, 8800.0, 23380.0, 6300.0, 7875.0, 7350.0, 8454.0, 9750.0, 7975.0, 10150.0, 32168.0, 12000.0, 13000.0, 10390.0, 24634.0, 11800.0, 7850.0, 15525.0, 8698.97, 4800.0, 24500.0, 14783.0, 3865.9, 22643.1, 6367.59, 21653.9, 9300.0]}\n",
+      "{'Location': {'BRIDGEVILLE': 2, 'EDGEWOOD': 2, 'NORTH VERSAILLES': 2, 'BEN AVON': 1, 'DRAVOSBURG': 3, 'DUQUESNE': 4, 'FOREST HILLS': 5, 'HARRISON ': 2, 'MT. OLIVER': 3, 'SCOTT ': 2, 'SWISSVALE': 3, 'WHITEHALL': 1, 'BALDWIN ': 6, 'ELIZABETH ': 2, 'INDIANA': 1, 'JEFFERSON ': 1, 'RANKIN': 1, 'SPRINGDALE ': 1, 'EAST PITTSBURGH': 2, 'WHITE OAK': 2, 'NORTH BRADDOCK': 2, 'WEST VIEW': 3, 'BRACKENRIDGE': 1, 'CLAIRTON': 2, 'MCKEES ROCKS': 2, 'MONROEVILLE  ': 2, \"O'HARA\": 1, 'BLAWNOX': 1, 'WEST DEER': 1, 'WEST MIFFLIN': 7, 'WILKINS': 2, 'MOUNT OLIVER': 2, 'NORTH FAYETTE': 1, 'EAST MCKEESPORT': 1, 'ROSS ': 1, 'PORT VUE': 3, 'MONROEVILLE': 3, 'EMSWORTH': 1, 'SHALER': 2, 'MUNHALL': 5, 'LEET': 1, 'PLEASANT HILLS': 1, 'WILKINSBURG': 2, 'HOMESTEAD': 1, 'CARNEGIE': 2, 'CRAFTON': 1, 'GLASSPORT': 1, 'TURTLE CREEK': 1, 'BRADDOCK': 2, 'VERSAILLES': 1, 'HARMAR': 1, 'WHITAKER': 1, 'HARRISON': 1, 'BETHEL PARK': 1, 'PLUM ': 1, 'LINCOLN ': 1, 'DORMONT': 1}, 'Year': {'2015': 22, '2016': 16, '2017': 24, '2018': 16, '2019': 26, '2020': 5}, 'Total Number of Loans': {'1': 100, '2': 9}, 'Total Loan Amount': [10000.0, 10000.0, 3900.0, 3900.0, 21475.0, 21475.0, 16475.0, 16475.0, 24575.0, 24575.0, 11950.0, 11950.0, 10714.0, 10714.0, 7400.0, 7400.0, 5000.0, 5000.0, 23000.0, 23000.0, 14750.0, 14750.0, 20883.0, 20883.0, 12550.0, 12550.0, 24875.0, 24875.0, 4950.0, 4950.0, 22650.0, 22650.0, 5885.0, 5885.0, 6505.48, 6505.48, 8950.0, 8950.0, 17725.0, 17725.0, 8118.0, 8118.0, 13265.0, 13265.0, 3000.0, 3000.0, 24800.0, 24800.0, 10020.0, 10020.0, 13575.0, 13575.0, 21710.0, 21710.0, 8720.0, 8720.0, 5200.0, 5200.0, 5786.0, 5786.0, 24330.0, 24330.0, 14496.0, 14496.0, 4186.0, 4186.0, 3250.0, 3250.0, 7221.0, 7221.0, 7862.0, 7862.0, 29243.0, 29243.0, 4189.0, 4189.0, 23975.0, 23975.0, 5925.0, 5925.0, 6227.0, 6227.0, 6611.0, 6611.0, 5613.0, 5613.0, 7000.0, 7000.0, 10350.0, 10350.0, 24000.0, 24000.0, 23375.0, 23375.0, 3750.0, 3750.0, 15375.0, 15375.0, 8127.5, 8127.5, 6000.0, 6000.0, 23825.0, 23825.0, 11718.0, 11718.0, 22310.0, 22310.0, 4370.0, 4370.0, 9181.0, 9181.0, 23375.0, 23375.0, 8085.0, 8085.0, 10000.0, 10000.0, 10985.0, 10985.0, 19740.0, 19740.0, 5250.0, 5250.0, 13998.56, 13998.56, 24500.0, 24500.0, 9500.0, 9500.0, 11240.0, 11240.0, 11300.0, 11300.0, 24570.0, 24570.0, 3850.0, 3850.0, 8875.0, 8875.0, 8800.0, 8800.0, 14825.0, 14825.0, 8725.0, 8725.0, 16972.0, 16972.0, 13465.0, 13465.0, 5400.0, 5400.0, 8886.0, 8886.0, 5950.0, 5950.0, 9659.0, 9659.0, 7282.57, 7282.57, 12000.0, 12000.0, 17310.0, 17310.0, 5500.0, 5500.0, 8800.0, 8800.0, 23380.0, 23380.0, 6300.0, 6300.0, 7875.0, 7875.0, 7350.0, 7350.0, 8454.0, 8454.0, 9750.0, 9750.0, 7975.0, 7975.0, 10150.0, 10150.0, 32168.0, 32168.0, 12000.0, 12000.0, 13000.0, 13000.0, 10390.0, 10390.0, 24634.0, 24634.0, 11800.0, 11800.0, 7850.0, 7850.0, 15525.0, 15525.0, 8698.97, 8698.97, 4800.0, 4800.0, 24500.0, 24500.0, 14783.0, 14783.0, 3865.9, 3865.9, 22643.1, 22643.1, 6367.59, 6367.59, 21653.9, 21653.9, 9300.0, 9300.0], 'List of Neighborhoods': ['BRIDGEVILLE', 'EDGEWOOD', 'NORTH VERSAILLES', 'BEN AVON', 'DRAVOSBURG', 'DUQUESNE', 'FOREST HILLS', 'HARRISON ', 'MT. OLIVER', 'SCOTT ', 'SWISSVALE', 'WHITEHALL', 'BALDWIN ', 'BALDWIN ', 'DRAVOSBURG', 'DUQUESNE', 'ELIZABETH ', 'INDIANA', 'JEFFERSON ', 'MT. OLIVER', 'RANKIN', 'SPRINGDALE ', 'EAST PITTSBURGH', 'WHITE OAK', 'EDGEWOOD', 'NORTH BRADDOCK', 'WEST VIEW', 'BRACKENRIDGE', 'CLAIRTON', 'MCKEES ROCKS', 'MONROEVILLE  ', \"O'HARA\", 'BLAWNOX', 'MONROEVILLE  ', 'MT. OLIVER', 'WEST DEER', 'WEST MIFFLIN', 'WILKINS', 'DRAVOSBURG', 'MOUNT OLIVER', 'DUQUESNE', 'WEST MIFFLIN', 'BALDWIN ', 'NORTH FAYETTE', 'EAST MCKEESPORT', 'SWISSVALE', 'ROSS ', 'WHITE OAK', 'PORT VUE', 'HARRISON ', 'MONROEVILLE', 'MOUNT OLIVER', 'WILKINS', 'EMSWORTH', 'MONROEVILLE', 'MCKEES ROCKS', 'SHALER', 'MUNHALL', 'ELIZABETH ', 'LEET', 'PLEASANT HILLS', 'WILKINSBURG', 'MUNHALL', 'HOMESTEAD', 'SWISSVALE', 'MONROEVILLE', 'CARNEGIE', 'MUNHALL', 'WEST MIFFLIN', 'BALDWIN ', 'CRAFTON', 'GLASSPORT', 'TURTLE CREEK', 'BRADDOCK', 'MUNHALL', 'PORT VUE', 'WEST MIFFLIN', 'FOREST HILLS', 'FOREST HILLS', 'BALDWIN ', 'WILKINSBURG', 'BRIDGEVILLE', 'CARNEGIE', 'VERSAILLES', 'SHALER', 'SCOTT ', 'WEST VIEW', 'WEST MIFFLIN', 'BRADDOCK', 'CLAIRTON', 'HARMAR', 'BALDWIN ', 'WHITAKER', 'MUNHALL', 'HARRISON', 'DUQUESNE', 'WEST MIFFLIN', 'FOREST HILLS', 'NORTH VERSAILLES', 'FOREST HILLS', 'PORT VUE', 'BETHEL PARK', 'NORTH BRADDOCK', 'WEST MIFFLIN', 'WEST VIEW', 'PLUM ', 'LINCOLN ', 'EAST PITTSBURGH', 'DORMONT']}\n",
       "\n",
       "-------------------------------------------------------------------\n",
       "    Summary Statistics: Allegheny Home Improvement Loan Program\n",
@@ -21,10 +21,10 @@
       "\n",
       "Number of neighborhoods served: 57\n",
       "Count of all loans: 109\n",
-      "Sum of all loans put together: 1354972.5699999998\n",
+      "Sum of all loans put together: 2709945.14\n",
       "Average (mean) amount of a loan: 12430.941009174312\n",
       "Average (median) amount of a loan: 10000.0\n",
-      "Standard deviation for loan amount given: 7137.415415298628\n",
+      "Standard deviation for loan amount given: 7120.950767267581\n",
       "West Mifflin received the most AHILP loans, totaling 7 loans.\n"
      ]
     }
@@ -42,7 +42,8 @@
     "# use with facility to manage our file object called ahilp_file\n",
     "# For key 'Location', the value will be a dictionary to hold neighborhood name and value count\n",
     "loan_amount_lst = []\n",
-    "ahilp_summary = {'Location': {}, 'Year': {}, 'Total Number of Loans': {}, 'Total Loan Amount': loan_amount_lst} \n",
+    "list_neighborhoods = []\n",
+    "ahilp_summary = {'Location': {}, 'Year': {}, 'Total Number of Loans': {}, 'Total Loan Amount': loan_amount_lst, 'List of Neighborhoods': list_neighborhoods} \n",
     "ahilp_dict = {}\n",
     "with open('ahilp-dataset-thru-6-2020.csv') as ahilp_file:\n",
     "    dreader = DictReader(ahilp_file)\n",
@@ -75,6 +76,12 @@
     "\n",
     "        if record['TOTAL LOAN AMOUNT'] not in ahilp_summary['Total Loan Amount']:\n",
     "            loan_amount_lst.append(float(record['TOTAL LOAN AMOUNT']))\n",
+    "        if record['TOTAL LOAN AMOUNT'] not in ahilp_summary['Total Loan Amount']:\n",
+    "            loan_amount_lst.append(float(record['TOTAL LOAN AMOUNT']))\n",
+    "        if record['MUNICIPALITY'] not in ahilp_summary['List of Neighborhoods']:\n",
+    "            list_neighborhoods.append(record['MUNICIPALITY'])\n",
+    "        else: \n",
+    "            list_neighborhoods.append(record['MUNICIPALITY'])\n",
     "\n",
     "\n",
     "print(\"Here's the dictionary I've created:\")\n",
@@ -115,6 +122,53 @@
     "   #     break\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BRIDGEVILLE': 2, 'EDGEWOOD': 2, 'NORTH VERSAILLES': 2, 'BEN AVON': 1, 'DRAVOSBURG': 3, 'DUQUESNE': 4, 'FOREST HILLS': 5, 'HARRISON ': 2, 'MT. OLIVER': 3, 'SCOTT ': 2, 'SWISSVALE': 3, 'WHITEHALL': 1, 'BALDWIN ': 6, 'ELIZABETH ': 2, 'INDIANA': 1, 'JEFFERSON ': 1, 'RANKIN': 1, 'SPRINGDALE ': 1, 'EAST PITTSBURGH': 2, 'WHITE OAK': 2, 'NORTH BRADDOCK': 2, 'WEST VIEW': 3, 'BRACKENRIDGE': 1, 'CLAIRTON': 2, 'MCKEES ROCKS': 2, 'MONROEVILLE  ': 2, \"O'HARA\": 1, 'BLAWNOX': 1, 'WEST DEER': 1, 'WEST MIFFLIN': 7, 'WILKINS': 2, 'MOUNT OLIVER': 2, 'NORTH FAYETTE': 1, 'EAST MCKEESPORT': 1, 'ROSS ': 1, 'PORT VUE': 3, 'MONROEVILLE': 3, 'EMSWORTH': 1, 'SHALER': 2, 'MUNHALL': 5, 'LEET': 1, 'PLEASANT HILLS': 1, 'WILKINSBURG': 2, 'HOMESTEAD': 1, 'CARNEGIE': 2, 'CRAFTON': 1, 'GLASSPORT': 1, 'TURTLE CREEK': 1, 'BRADDOCK': 2, 'VERSAILLES': 1, 'HARMAR': 1, 'WHITAKER': 1, 'HARRISON': 1, 'BETHEL PARK': 1, 'PLUM ': 1, 'LINCOLN ': 1, 'DORMONT': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ahilp_summary['Location'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BRIDGEVILLE', 'EDGEWOOD', 'NORTH VERSAILLES', 'BEN AVON', 'DRAVOSBURG', 'DUQUESNE', 'FOREST HILLS', 'HARRISON ', 'MT. OLIVER', 'SCOTT ', 'SWISSVALE', 'WHITEHALL', 'BALDWIN ', 'BALDWIN ', 'DRAVOSBURG', 'DUQUESNE', 'ELIZABETH ', 'INDIANA', 'JEFFERSON ', 'MT. OLIVER', 'RANKIN', 'SPRINGDALE ', 'EAST PITTSBURGH', 'WHITE OAK', 'EDGEWOOD', 'NORTH BRADDOCK', 'WEST VIEW', 'BRACKENRIDGE', 'CLAIRTON', 'MCKEES ROCKS', 'MONROEVILLE  ', \"O'HARA\", 'BLAWNOX', 'MONROEVILLE  ', 'MT. OLIVER', 'WEST DEER', 'WEST MIFFLIN', 'WILKINS', 'DRAVOSBURG', 'MOUNT OLIVER', 'DUQUESNE', 'WEST MIFFLIN', 'BALDWIN ', 'NORTH FAYETTE', 'EAST MCKEESPORT', 'SWISSVALE', 'ROSS ', 'WHITE OAK', 'PORT VUE', 'HARRISON ', 'MONROEVILLE', 'MOUNT OLIVER', 'WILKINS', 'EMSWORTH', 'MONROEVILLE', 'MCKEES ROCKS', 'SHALER', 'MUNHALL', 'ELIZABETH ', 'LEET', 'PLEASANT HILLS', 'WILKINSBURG', 'MUNHALL', 'HOMESTEAD', 'SWISSVALE', 'MONROEVILLE', 'CARNEGIE', 'MUNHALL', 'WEST MIFFLIN', 'BALDWIN ', 'CRAFTON', 'GLASSPORT', 'TURTLE CREEK', 'BRADDOCK', 'MUNHALL', 'PORT VUE', 'WEST MIFFLIN', 'FOREST HILLS', 'FOREST HILLS', 'BALDWIN ', 'WILKINSBURG', 'BRIDGEVILLE', 'CARNEGIE', 'VERSAILLES', 'SHALER', 'SCOTT ', 'WEST VIEW', 'WEST MIFFLIN', 'BRADDOCK', 'CLAIRTON', 'HARMAR', 'BALDWIN ', 'WHITAKER', 'MUNHALL', 'HARRISON', 'DUQUESNE', 'WEST MIFFLIN', 'FOREST HILLS', 'NORTH VERSAILLES', 'FOREST HILLS', 'PORT VUE', 'BETHEL PARK', 'NORTH BRADDOCK', 'WEST MIFFLIN', 'WEST VIEW', 'PLUM ', 'LINCOLN ', 'EAST PITTSBURGH', 'DORMONT']\n",
+      "\n",
+      "WEST MIFFLIN\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys_list = ahilp_summary['List of Neighborhoods']\n",
+    "print(keys_list)\n",
+    "the_mode = statistics.mode(keys_list)\n",
+    "print()\n",
+    "print(the_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
