--- a/ahilp_csv_tinkering.ipynb
+++ b/ahilp_csv_tinkering.ipynb
@@ -93,9 +93,11 @@
     "print(\"-------------------------------------------------------------------\")\n",
     "print()\n",
     "counter = 0\n",
+    "# sum total number of loans\n",
     "for item in ahilp_summary['Location'].values():\n",
     "    counter = counter + item\n",
     "agg_loan_count = counter\n",
+    "# calculates neighborhoods served\n",
     "neighborhoods_served = len(ahilp_summary['Location'])\n",
     "print(\"Number of neighborhoods served:\", neighborhoods_served)\n",
     "print(\"Count of all loans:\", agg_loan_count)\n",
@@ -112,7 +114,9 @@
     "location_mode = max(loan_count_lst)\n",
     "print(\"West Mifflin received the most AHILP loans, totaling\", location_mode, \"loans.\")\n",
     "    \n",
-    "\n",
+    "# max loan count as another dictionary or maybe a tuple, because then you can access a two item list \n",
+    "# more easily, \n",
+    "# max\n",
     "#counter = 0\n",
     "#for item in ahilp_summary['Location'].values():\n",
     "   # counter = counter + item\n",
@@ -168,7 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#from collections import Counter munis = [record[\"MUNICIPALITY\"] for record in dreader] Counter(munis) "
+   ]
   },
   {
    "cell_type": "code",
